[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Button9.gd" type="Script" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]
[ext_resource path="res://Button6.gd" type="Script" id=5]
[ext_resource path="res://Button8.gd" type="Script" id=6]
[ext_resource path="res://Button5.gd" type="Script" id=7]
[ext_resource path="res://Button7.gd" type="Script" id=8]
[ext_resource path="res://Button4.gd" type="Script" id=9]
[ext_resource path="res://Button2.gd" type="Script" id=10]
[ext_resource path="res://Button3.gd" type="Script" id=11]
[ext_resource path="res://ButtonRestart.gd" type="Script" id=12]
[ext_resource path="res://Wins.gd" type="Script" id=13]
[ext_resource path="res://Current.gd" type="Script" id=14]

[node name="Main" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 123, 125 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 192.0
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
margin_left = 320.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 192.0
script = ExtResource( 10 )

[node name="Button3" type="Button" parent="."]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
script = ExtResource( 11 )

[node name="Button4" type="Button" parent="."]
margin_left = 192.0
margin_top = 192.0
margin_right = 320.0
margin_bottom = 320.0
script = ExtResource( 9 )

[node name="Button5" type="Button" parent="."]
margin_left = 320.0
margin_top = 192.0
margin_right = 448.0
margin_bottom = 320.0
script = ExtResource( 7 )

[node name="Button6" type="Button" parent="."]
margin_left = 448.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 320.0
script = ExtResource( 5 )

[node name="Button7" type="Button" parent="."]
margin_left = 192.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 448.0
script = ExtResource( 8 )

[node name="Button8" type="Button" parent="."]
margin_left = 320.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 448.0
script = ExtResource( 6 )

[node name="Button9" type="Button" parent="."]
margin_left = 448.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 448.0
script = ExtResource( 3 )

[node name="ButtonRestart" type="Button" parent="."]
margin_left = 184.0
margin_top = 152.0
margin_right = 584.0
margin_bottom = 320.0
script = ExtResource( 12 )

[node name="Wins" type="Label" parent="."]
margin_left = 677.0
margin_top = 24.0
margin_right = 972.0
margin_bottom = 82.0
script = ExtResource( 13 )

[node name="Current" type="Label" parent="."]
margin_left = 688.0
margin_top = 139.0
margin_right = 983.0
margin_bottom = 197.0
script = ExtResource( 14 )

[connection signal="bt_click" from="Sprite" to="Button" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button2" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button3" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button4" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button5" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button6" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button7" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button8" method="_on_Sprite_bt_click"]
[connection signal="bt_click" from="Sprite" to="Button9" method="_on_Sprite_bt_click"]
[connection signal="new_round" from="Sprite" to="Wins" method="_on_Sprite_new_round"]
[connection signal="switch_turn" from="Sprite" to="Current" method="_on_Sprite_switch_turn"]
[connection signal="button_up" from="Button" to="Sprite" method="_on_Button_button_up"]
[connection signal="button_up" from="Button2" to="Sprite" method="_on_Button2_button_up"]
[connection signal="button_up" from="Button3" to="Sprite" method="_on_Button3_button_up"]
[connection signal="button_up" from="Button4" to="Sprite" method="_on_Button4_button_up"]
[connection signal="button_up" from="Button5" to="Sprite" method="_on_Button5_button_up"]
[connection signal="button_up" from="Button6" to="Sprite" method="_on_Button6_button_up"]
[connection signal="button_up" from="Button7" to="Sprite" method="_on_Button7_button_up"]
[connection signal="button_up" from="Button8" to="Sprite" method="_on_Button8_button_up"]
[connection signal="button_up" from="Button9" to="Sprite" method="_on_Button9_button_up"]
[connection signal="button_up" from="ButtonRestart" to="Sprite" method="_on_ButtonRestart_button_up"]
